redash-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: redash
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    name: redis
  selector:
    app: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: redash
spec:
  selector:
    matchLabels:
      app: redis # has to match .spec.template.metadata.labels
  serviceName: "redis"
  template:
    metadata:
      labels:
        app: redis # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: redis
        image: redis:3.0-alpine
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis-pvc
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: redis
#   namespace: redash
# spec:
#   selector:
#     matchLabels:
#       name: redis
#   serviceName: redis
#   template:
#     metadata:
#       labels:
#         name: redis 
#     spec:
#       containers:
#       - image:  redis:3.0-alpine
#         name:  redis 
#         ports:
#         - containerPort:  6379
#           name:  redis
#         volumeMounts:
#         - mountPath: /data
#           name: data
#       volumes:
#         - name: data
#           persistentVolumeClaim:
#             claimName: redis-pvc
# apiVersion: extensions/v1beta1
# kind: Deployment
# metadata:
#   name:  redis
#   namespace: redash
#   labels:
#     name:  redis
# spec:
#   template:
#     metadata:
#       labels:
#         name:  redis
#     spec:
#       containers:
#       - image:  redis:3.0-alpine
#         name:  redis 
#         ports:
#         - containerPort:  6379
#           name:  redis
#         volumeMounts:
#         - mountPath: /data
#           name: data
#       volumes:
#         - name: data
#           persistentVolumeClaim:
#             claimName: redis-pvc
