redash-server.yaml
kind: Service
apiVersion: v1
metadata:
  name:  redash-server
  namespace: redash
spec:
  selector:
    name:  redash-server
  type:  ClusterIP
  ports:
  - name:  redash-server
    port:  5000
    targetPort:  5000
---
# redash
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  redash-server
  namespace: redash
  labels:
    name:  redash-server
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  redash-server
    spec:
      containers:
      - image:  redash:latest
        name:  redash-server
        ports:
          - containerPort: 5000
            name: redash-server
        command:
          - /bin/bash
          - -c  
          - /app/bin/docker-entrypoint server 
        lifecycle:                        # Pod启动后执行create_db 初始化数据库
          postStart:
            exec:
              command:
                - bash 
                - -c
                - /app/bin/docker-entrypoint  create_db
      restartPolicy: Always
