redash-work.yaml
kind: Service
apiVersion: v1
metadata:
  name:  redash-work
  namespace: redash
spec:
  selector:
    name:  redash-work
  type:  ClusterIP
  ports:
  - name:  redash-work
    port:  5000
    targetPort:  5000
---
# redash
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  redash-work
  namespace: redash
  labels:
    name:  redash-work
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name:  redash-work
    spec:
      containers:
      - image:  redash:latest
        name:  redash-work
        ports:
          - containerPort: 5000
            name: redash-work
        command:
          - bash
          - -c
          - /app/bin/docker-entrypoint scheduler
          # - while true;do echo 1;sleep;done
        resources:
      restartPolicy: Always
